# microgrid-ems-simulation

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JER_all_experiments_notebook.ipynb  LICENSE  MANUSCRIPT_SCAFFOLD.md  PUBLICATION_GUIDE.md  README.md  jer_experiments_notebook.ipynb  main.py  pyproject.toml  requirements.txt  run_experiments.ps1  run_q1_tests.ps1  run_reference_tests.ps1
docs/: api.md  joss_checklist.md
jer_microgrid/: __init__.py  config.py  controllers.py  cross_benchmark.py  edge_profiler.py  evidence_upgrade.py  fgcs_extensions.py  full_results_audit.py  generate_figure1.py  manuscript_figures.py  metrics.py  network_sim.py  optimization_refs.py  parameter_audit.py  pipeline.py  plot_fgcs_resilience.py  plotting.py  publication.py  refresh_artifacts_from_ticks.py  reporting.py  simulation.py  stats_utils.py  suscom_extensions.py  synth.py  utils.py
manuscript/: FGCS_revision.aux  FGCS_revision.bbl  FGCS_revision.blg  FGCS_revision.out  FGCS_revision.tex  cas-refs.bib
outputs_24h_core_eval/: ablation_metrics_by_scenario_day.csv  ablation_table.csv  ablation_table.tex  claims_by_scenario.csv  claims_by_scenario.tex  claims_summary_table.csv  claims_summary_table.tex  main_comparison_table.csv  main_comparison_table.tex  main_metrics_by_scenario_day.csv  paired_stats_all_baselines.csv  paired_stats_all_baselines.tex  run_manifest.json  runtime_summary.csv  runtime_summary.tex  stress_proxy_table.csv  stress_proxy_table.tex
outputs_24h_eval/: synthetic_dataset.csv
outputs_24h_eval_retry/: ablation_table.csv  (+26 more)
(+316 files in other folders)
